<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="@color/black">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama_aplikasi"
        android:textColor="@color/gold"
        android:textSize="30dp"
        android:textStyle="bold"
        android:paddingLeft="50dp"
        android:paddingTop="10dp">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="210dp"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:layout_centerHorizontal="true"
        android:gravity="bottom">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="500dp"
        android:text="@string/intro"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:gravity="bottom"
        android:paddingLeft="15dp">
    </TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="590dp"
        android:paddingLeft="115dp">

        <Button
            android:id="@+id/btn_pesan_sekarang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gold"
            android:text="@string/btn_pesan_sekarang"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:layout_gravity="bottom">
        </Button>
    </LinearLayout>

</RelativeLayout>