<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="220dp"
        android:layout_centerHorizontal="true"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:gravity="bottom">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="325dp"
        android:text="@string/username"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:gravity="bottom"
        android:paddingLeft="55dp">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="405dp"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:gravity="bottom"
        android:paddingLeft="55dp">
    </TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="330dp"
        android:paddingLeft="160dp">

        <EditText
            android:id="@+id/username"
            android:layout_width="180dp"
            android:layout_height="35dp"
            android:background="@color/gold"
            android:textColor="@color/black"
            android:layout_gravity="bottom">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="410dp"
        android:paddingLeft="160dp">

        <EditText
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_width="180dp"
            android:layout_height="35dp"
            android:background="@color/gold"
            android:textColor="@color/black"
            android:layout_gravity="bottom">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="520dp"
        android:paddingLeft="160dp">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:backgroundTint="@color/gold"
            android:textColor="@color/black"
            android:layout_gravity="bottom">
        </Button>
    </LinearLayout>

</RelativeLayout>